--- a/app/src/main/res/navigation/nav_graph.xml
+++ b/app/src/main/res/navigation/nav_graph.xml
@@ -3,11 +3,11 @@
     xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
     android:id="@+id/nav_graph"
-    app:startDestination="@id/test_fragment">
+    app:startDestination="@id/logInPage">
 
     <fragment
-        android:id="@+id/test_fragment"
-        android:name="com.example.barbersapplication.test_fragment"
-        android:label="fragment_test_fragment"
-        tools:layout="@layout/fragment_test_fragment" />
+        android:id="@+id/logInPage"
+        android:name="com.example.barbersapplication.LogInPage"
+        android:label="fragment_log_in_page"
+        tools:layout="@layout/fragment_log_in_page" />
 </navigation>
