--- a/app/src/main/res/navigation/nav_graph.xml
+++ b/app/src/main/res/navigation/nav_graph.xml
@@ -3,11 +3,16 @@
     xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
     android:id="@+id/nav_graph"
-    app:startDestination="@id/logInPage">
+    app:startDestination="@id/messageAfterSignUpAsBarberShop">
 
     <fragment
         android:id="@+id/logInPage"
         android:name="com.example.barbersapplication.LogInPage"
         android:label="fragment_log_in_page"
         tools:layout="@layout/fragment_log_in_page" />
+    <fragment
+        android:id="@+id/messageAfterSignUpAsBarberShop"
+        android:name="com.example.barbersapplication.MessageAfterSignUpAsBarberShop"
+        android:label="fragment_message_after_sign_up_as_barber_shop"
+        tools:layout="@layout/fragment_message_after_sign_up_as_barber_shop" />
 </navigation>
