--- a/app/src/main/res/navigation/nav_graph.xml
+++ b/app/src/main/res/navigation/nav_graph.xml
@@ -10,4 +10,9 @@
         android:name="com.example.barbersapplication.LogInPage"
         android:label="fragment_log_in_page"
         tools:layout="@layout/fragment_log_in_page" />
+    <fragment
+        android:id="@+id/signUpAsBarberPage"
+        android:name="com.example.barbersapplication.SignUpAsBarberPage"
+        android:label="fragment_sign_up_as_barber_page"
+        tools:layout="@layout/fragment_sign_up_as_barber_page" />
 </navigation>
