--- a/app/src/main/res/layout/fragment_log_in_page.xml
+++ b/app/src/main/res/layout/fragment_log_in_page.xml
@@ -81,6 +81,8 @@
         android:layout_marginStart="16dp"
         android:layout_marginTop="31dp"
         android:layout_marginEnd="8dp"
+        android:clickable="true"
+        android:minHeight="48dp"
         android:text="Sign up as Client"
         android:textColor="@color/purple_700"
         android:textSize="24sp"
@@ -96,6 +98,8 @@
         android:layout_marginStart="16dp"
         android:layout_marginTop="16dp"
         android:layout_marginEnd="8dp"
+        android:clickable="true"
+        android:minHeight="48dp"
         android:text="Sign up as BarberShop"
         android:textColor="@color/purple_700"
         android:textSize="24sp"
