--- a/app/src/main/res/layout/fragment_add_barber.xml
+++ b/app/src/main/res/layout/fragment_add_barber.xml
@@ -7,66 +7,52 @@
     tools:context=".AddBarber" >
 
     <TextView
-        android:id="@+id/addBarber_name_tv"
+        android:id="@+id/addbarber_name_tv"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:layout_marginStart="8dp"
-        android:layout_marginTop="8dp"
-        android:layout_marginEnd="8dp"
+        android:layout_marginStart="24dp"
+        android:layout_marginTop="24dp"
         android:text="Name :"
         android:textSize="24sp"
-        app:layout_constraintBottom_toTopOf="@+id/addBarber_textToAddPhotos_tv"
-        app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintHorizontal_bias="0.025"
+        android:textStyle="bold"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toTopOf="parent"
-        app:layout_constraintVertical_bias="0.0" />
+        app:layout_constraintTop_toTopOf="parent" />
 
     <TextView
-        android:id="@+id/addBarber_textToAddPhotos_tv"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:layout_marginStart="8dp"
-        android:layout_marginTop="16dp"
-        android:layout_marginEnd="8dp"
-        android:layout_marginBottom="470dp"
+        android:id="@+id/addbarber_texttoaddphotos_tv"
+        android:layout_width="210dp"
+        android:layout_height="60dp"
+        android:layout_marginTop="32dp"
         android:text="Add pictures of Barber works"
         android:textSize="24sp"
-        app:layout_constraintBottom_toBottomOf="parent"
-        app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintHorizontal_bias="0.158"
-        app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/addBarber_nameInput_tv" />
-
-    <ImageButton
-        android:id="@+id/addBarber_addPhotos_bt"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:layout_marginStart="8dp"
-        android:layout_marginTop="61dp"
-        android:layout_marginEnd="8dp"
-        android:layout_marginBottom="455dp"
-        android:src="@android:drawable/ic_menu_add"
-        app:layout_constraintBottom_toBottomOf="parent"
-        app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintStart_toEndOf="@+id/addBarber_textToAddPhotos_tv"
-        app:layout_constraintTop_toBottomOf="@+id/addBarber_nameInput_tv" />
+        android:textStyle="bold"
+        app:layout_constraintStart_toStartOf="@+id/addbarber_name_tv"
+        app:layout_constraintTop_toBottomOf="@+id/addbarber_name_tv" />
 
     <EditText
-        android:id="@+id/addBarber_nameInput_tv"
+        android:id="@+id/addbarber_nameinput_et"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:layout_marginStart="8dp"
-        android:layout_marginTop="8dp"
-        android:layout_marginEnd="8dp"
-        android:layout_marginBottom="28dp"
+        android:layout_marginStart="16dp"
+        android:layout_marginEnd="16dp"
         android:ems="10"
         android:inputType="textPersonName"
         android:textSize="24sp"
-        app:layout_constraintBottom_toTopOf="@+id/addBarber_textToAddPhotos_tv"
+        app:layout_constraintBottom_toBottomOf="@+id/addbarber_name_tv"
         app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintHorizontal_bias="0.0"
-        app:layout_constraintStart_toEndOf="@+id/addBarber_name_tv"
-        app:layout_constraintTop_toTopOf="parent" />
+        app:layout_constraintStart_toEndOf="@+id/addbarber_name_tv"
+        app:layout_constraintTop_toTopOf="@+id/addbarber_name_tv" />
+
+    <Button
+        android:id="@+id/addbarber_addpictures_btn"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_marginEnd="24dp"
+        android:text="Add"
+        app:icon="@android:drawable/ic_menu_add"
+        app:layout_constraintBottom_toBottomOf="@+id/addbarber_texttoaddphotos_tv"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintStart_toEndOf="@+id/addbarber_texttoaddphotos_tv"
+        app:layout_constraintTop_toTopOf="@+id/addbarber_texttoaddphotos_tv" />
 
 </androidx.constraintlayout.widget.ConstraintLayout>
