--- a/app/src/main/res/layout/fragment_add_barber.xml
+++ b/app/src/main/res/layout/fragment_add_barber.xml
@@ -55,4 +55,15 @@
         app:layout_constraintStart_toEndOf="@+id/addbarber_texttoaddphotos_tv"
         app:layout_constraintTop_toTopOf="@+id/addbarber_texttoaddphotos_tv" />
 
+    <Button
+        android:id="@+id/addbarber_save_btn"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_marginBottom="24dp"
+        android:text="Save"
+        app:icon="@android:drawable/ic_menu_save"
+        app:layout_constraintBottom_toBottomOf="parent"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintStart_toStartOf="parent" />
+
 </androidx.constraintlayout.widget.ConstraintLayout>
