--- a/app/src/main/res/layout/fragment_message_after_sign_up_as_barber_shop.xml
+++ b/app/src/main/res/layout/fragment_message_after_sign_up_as_barber_shop.xml
@@ -30,6 +30,7 @@
         android:layout_marginEnd="16dp"
         android:text="Thanks,your Barber details have recived and now our team will check and confirm those details. once we done and find out that everything is allright you will get a message that you can start use the app.  Thanks!"
         android:textSize="30sp"
+        android:textStyle="bold"
         app:layout_constraintBottom_toTopOf="@+id/messageAfterSignAsBarber_ok_btn"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintHorizontal_bias="0.0"
