--- a/app/src/main/res/layout/fragment_add_barber.xml
+++ b/app/src/main/res/layout/fragment_add_barber.xml
@@ -66,4 +66,13 @@
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent" />
 
+    <androidx.recyclerview.widget.RecyclerView
+        android:id="@+id/addbarber_postslist_rv"
+        android:layout_width="317dp"
+        android:layout_height="311dp"
+        android:layout_marginTop="32dp"
+        app:layout_constraintEnd_toEndOf="@+id/addbarber_nameinput_et"
+        app:layout_constraintStart_toStartOf="@+id/addbarber_name_tv"
+        app:layout_constraintTop_toBottomOf="@+id/addbarber_texttoaddphotos_tv" />
+
 </androidx.constraintlayout.widget.ConstraintLayout>
