--- a/app/src/main/res/navigation/nav_graph.xml
+++ b/app/src/main/res/navigation/nav_graph.xml
@@ -3,7 +3,7 @@
     xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
     android:id="@+id/nav_graph"
-    app:startDestination="@id/logInPage">
+    app:startDestination="@id/clientHomePage">
 
     <fragment
         android:id="@+id/logInPage"
@@ -71,4 +71,14 @@
         android:name="com.example.barbersapplication.MessageAfterBookingMeetingPage"
         android:label="fragment_message_after_booking_metting_page"
         tools:layout="@layout/fragment_message_after_booking_meeting_page" />
+    <fragment
+        android:id="@+id/seeBarberPostAsClientPage"
+        android:name="com.example.barbersapplication.SeeBarberPostAsClientPage"
+        android:label="fragment_see_barber_post_as_client_page"
+        tools:layout="@layout/fragment_see_barber_post_as_client_page" />
+    <fragment
+        android:id="@+id/clientHomePage"
+        android:name="com.example.barbersapplication.ClientHomePage"
+        android:label="fragment_client_home_page"
+        tools:layout="@layout/fragment_client_home_page" />
 </navigation>
