--- a/app/src/main/res/layout/fragment_client_home_page.xml
+++ b/app/src/main/res/layout/fragment_client_home_page.xml
@@ -32,6 +32,7 @@
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_marginStart="24dp"
+        android:layout_marginEnd="8dp"
         android:text="Search"
         app:icon="@android:drawable/ic_menu_search"
         app:layout_constraintBottom_toBottomOf="@+id/clienthomepage_search_et"
@@ -52,10 +53,21 @@
 
     <androidx.recyclerview.widget.RecyclerView
         android:id="@+id/clienthomepage_barbershopslist_rv"
-        android:layout_width="346dp"
-        android:layout_height="336dp"
+        android:layout_width="345dp"
+        android:layout_height="260dp"
         android:layout_marginTop="24dp"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toBottomOf="@+id/clienthomepage_barbershopslist_tv" />
+
+    <Button
+        android:id="@+id/clienthomepage_mymeetings_btn"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_marginTop="24dp"
+        android:text="My meetings"
+        app:layout_constraintBottom_toBottomOf="parent"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toBottomOf="@+id/clienthomepage_barbershopslist_rv" />
 </androidx.constraintlayout.widget.ConstraintLayout>
