--- a/app/src/main/res/layout/fragment_log_in_page.xml
+++ b/app/src/main/res/layout/fragment_log_in_page.xml
@@ -111,7 +111,8 @@
         android:id="@+id/imageView"
         android:layout_width="150dp"
         android:layout_height="150dp"
-        android:src="@drawable/barbers_logo"
+        android:scaleType="centerCrop"
+        android:src="@drawable/barbers_app_logo"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="parent" />
